[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/uipack/Buttons/blue_button01.png" type="Texture" id=1]
[ext_resource path="res://assets/uipack/Buttons/blue_button00.png" type="Texture" id=2]
[ext_resource path="res://assets/uipack/Font/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/uipack/Font/heading1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Menu/SignupScreen.gd" type="Script" id=5]

[node name="SignupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.211765, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignupForm" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -206.0
margin_right = 95.0
margin_bottom = 206.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="SignupForm"]
margin_right = 190.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SignupForm"]
margin_top = 19.0
margin_right = 190.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 4 )
text = "Login"

[node name="MarginContainer3" type="MarginContainer" parent="SignupForm"]
margin_top = 55.0
margin_right = 190.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 20 )

[node name="LabelUsername" type="Label" parent="SignupForm"]
margin_top = 79.0
margin_right = 190.0
margin_bottom = 97.0
text = "Username"

[node name="Username" type="LineEdit" parent="SignupForm"]
margin_top = 101.0
margin_right = 190.0
margin_bottom = 129.0

[node name="MarginContainer2" type="MarginContainer" parent="SignupForm"]
margin_top = 133.0
margin_right = 190.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 10 )

[node name="LabelPassword" type="Label" parent="SignupForm"]
margin_top = 147.0
margin_right = 190.0
margin_bottom = 165.0
text = "Password"

[node name="Password" type="LineEdit" parent="SignupForm"]
margin_top = 169.0
margin_right = 190.0
margin_bottom = 197.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SignupForm"]
margin_top = 201.0
margin_right = 190.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 10 )

[node name="LabelPassword2" type="Label" parent="SignupForm"]
margin_top = 215.0
margin_right = 190.0
margin_bottom = 233.0
text = "repeat Password"

[node name="PasswordRepeat" type="LineEdit" parent="SignupForm"]
margin_top = 237.0
margin_right = 190.0
margin_bottom = 265.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="SignupForm"]
margin_top = 269.0
margin_right = 190.0
margin_bottom = 299.0
rect_min_size = Vector2( 0, 30 )

[node name="ButtonLogin" type="TextureButton" parent="SignupForm"]
margin_top = 303.0
margin_right = 190.0
margin_bottom = 352.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="SignupForm/ButtonLogin"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "create account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="SignupForm"]
margin_top = 356.0
margin_right = 190.0
margin_bottom = 370.0

[node name="LinkButton" type="LinkButton" parent="SignupForm/CenterContainer"]
margin_left = 50.0
margin_right = 140.0
margin_bottom = 14.0
text = "login instead"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -85.5
margin_right = 209.0
margin_bottom = 85.5
window_title = "Error"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SignupForm/ButtonLogin" to="." method="_on_ButtonLogin_pressed"]
[connection signal="pressed" from="SignupForm/CenterContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
